--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scrabble-express",
+  "name": "ScrabbleExpress",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,11 +11,8 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
-    "jasmine-node": "^1.14.5",
     "morgan": "~1.6.1",
+    "nodemon": "^1.9.2",
     "serve-favicon": "~2.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.9.2"
   }
 }
